@@ -341,7 +341,8 @@ void Rf_setBaseDevice(Rboolean val, DevDesc *dd)
     ((baseSystemState *)GEsystemState((GEDevDesc *)dd, baseRegisterIndex))->baseDevice = val;
 }
 
-SEXP Rf_displayList(DevDesc *dd)
-{
-    return ((GEDevDesc *)dd)->dev->displayList;
+/*
+SEXP Rf_displayList(DevDesc *dd) {
+    return ((GEDevDesc*) dd)->dev->displayList;
 }
+*/
