@@ -802,6 +802,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"strwidth", do_strwidth, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"contour", do_contour, 0, 11, 12, {PP_FUNCALL, PREC_FN, 0}},
     {"contourLines", do_contourLines, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
+    {"contourdef", do_contourDef, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"image", do_image, 0, 111, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"dend", do_dend, 0, 111, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"dend.window", do_dendwindow, 0, 111, 5, {PP_FUNCALL, PREC_FN, 0}},
