@@ -30,15 +30,14 @@
 #include <Graphics.h>
 #include <Rmodules/Rvfonts.h>
 
-static VfontRoutines routines, *ptr = &routines;
-
+static VfontRoutines routines;
 static int initialized = 0;
 
 void R_GE_setVFontRoutines(R_GE_VStrWidthRoutine vwidth, R_GE_VStrHeightRoutine vheight, R_GE_VTextRoutine vtext)
 {
-    ptr->GEVStrWidth = vwidth;
-    ptr->GEVStrHeight = vheight;
-    ptr->GEVText = vtext;
+    routines.GEVStrWidth = vwidth;
+    routines.GEVStrHeight = vheight;
+    routines.GEVText = vtext;
 }
 
 static void vfonts_Init(void)
@@ -47,7 +46,7 @@ static void vfonts_Init(void)
     initialized = -1;
     if (!res)
         return;
-    if (!ptr->GEVStrWidth)
+    if (!routines.GEVStrWidth)
         error(_("vfont routines cannot be accessed in module"));
     initialized = 1;
     return;
@@ -60,7 +59,7 @@ attribute_hidden double R_GE_VStrWidth(const char *s, int enc, R_GE_gcontext *gc
     if (initialized > 0)
     {
         const char *str = reEnc(s, enc, CE_LATIN1, 2 /* '.' */);
-        return (*ptr->GEVStrWidth)(str, gc, dd);
+        return (*routines.GEVStrWidth)(str, gc, dd);
     }
     else
     {
@@ -76,7 +75,7 @@ attribute_hidden double R_GE_VStrHeight(const char *s, int enc, R_GE_gcontext *g
     if (initialized > 0)
     {
         /* The strheight does not depend on the encoding. */
-        return (*ptr->GEVStrHeight)(s, gc, dd);
+        return (*routines.GEVStrHeight)(s, gc, dd);
     }
     else
     {
@@ -93,7 +92,7 @@ attribute_hidden void R_GE_VText(double x, double y, const char *const s, int en
     if (initialized > 0)
     {
         const char *str = reEnc(s, enc, CE_LATIN1, 2 /* '.' */);
-        (*ptr->GEVText)(x, y, str, x_justify, y_justify, rotation, gc, dd);
+        (*routines.GEVText)(x, y, str, x_justify, y_justify, rotation, gc, dd);
     }
     else
         error(_("Hershey fonts cannot be loaded"));
